Terminado textarea, falta hacer los modals

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,11 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        
+        <div class="cr-material-field area ">
+            <label class="m-label">You comment</label>
+            <textarea class="m-area validate numbers"></textarea>
+            <span data-error="error" data-positive="done" class="m-state"></span>
+        </div>
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
