Chips terminado en un 70% falta personalizar y agregar clases para poder colocarle imagenes y acciones

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,27 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr-material-field area ">
-            <label class="m-label">You comment</label>
-            <textarea class="m-area validate numbers"></textarea>
-            <span data-error="error" data-positive="done" class="m-state"></span>
-        </div>
+       <div class="cr chip close">
+            <div class="content">Solid</div>
+           <i class="material-icons">close</i>
+       </div>
+        <div class="cr chip close">
+            <div class="content">Important</div>
+           <i class="material-icons">close</i>
+       </div>
+        <div class="cr chip close">
+            <div class="content">Issue</div>
+           <i  class="material-icons">close</i>
+       </div>
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
+    <script type="text/javascript">
+        function log () {
+            console.log('log');
+        }
+    </script>
 </body>
 
 </html>
