Badges terminado, falta personalizar la posicion en la que aparecen, esto es debido a que su uso depende de las Li, tables, navbar y demas, asi que por ahora solo el diseño inicial esta finalizado

--- a/public/index.html
+++ b/public/index.html
@@ -18,31 +18,19 @@
 </head>
 
 <body>
-    <button class="cr button float pulse">
+    <button class="cr button  float pulse">
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-       <div class="cr chip close">
-            <div class="content">Solid</div>
-           <i class="material-icons">close</i>
-       </div>
-        <div class="cr chip close">
-            <div class="content">Important</div>
-           <i class="material-icons">close</i>
-       </div>
-        <div class="cr chip close">
-            <div class="content">Issue</div>
-           <i  class="material-icons">close</i>
-       </div>
+       <div class="cr card">
+           <div class="card-head">
+           </div>
+       </div>  
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
-    <script type="text/javascript">
-        function log () {
-            console.log('log');
-        }
-    </script>
+    <script type="text/javascript"></script>
 </body>
 
 </html>
