--- a/public/index.html
+++ b/public/index.html
@@ -9,28 +9,37 @@
     <link rel="stylesheet" href="../Css/Grid/flexboxgrid.min.css">
     <title>LearnDesign</title>
     <style type="text/css">
-    body {}
-
-    .sep {
-        padding-top: 20px;
-    }
+     
+        /* body{
+            background: rgba(0, 0, 0, 0.575)
+        } */
+        .sep {
+            padding-top: 20px;
+        }
     </style>
 </head>
 
 <body>
-    <button class="cr button  float pulse">
+    <button onclick="triggerModal();" class="cr button  float pulse">
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-       <div class="cr card">
-           <div class="card-head">
-           </div>
-       </div>  
+        <div class="cr modal">
+            d
+        </div>               
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
-    <script type="text/javascript"></script>
+    <script type="text/javascript">
+        function triggerModal() {
+            if (!$('.cr.modal').is('.opened')) {
+                 $('.cr.modal').modal('show');
+            }else{
+                $('.cr.modal').modal('hide');
+            }
+        }
+    </script>
 </body>
 
 </html>
