Agregado transicion de pantalla oscura en modal, hay que lograr que pueda salirse undiendo en cualquier lado de la pantalla

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,11 @@
     </button>
     <div class="cr container">
         <div class="cr modal">
-            d
-        </div>               
+            
+        </div>      
+        
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, laboriosam est. Impedit ut, officia totam dicta quas facilis dolorum tempora ipsam, nihil voluptates odio mollitia? Voluptas sapiente ex similique autem.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis mollitia error eligendi voluptates minus nemo, provident at. Distinctio ab accusantium non! Fugiat ratione neque eveniet laudantium officia esse, iusto nulla?
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
