los modal ahora son responsivos y se adaptan a cualquier tipo de pantalla, centrandose correctamente no como antes

--- a/public/index.html
+++ b/public/index.html
@@ -24,23 +24,20 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr modal ">
-            <i class="material-icons close">close</i>
-            <div class="modal-head center">Modal Head.</div>
-            <div class="modal-body ">
+        <div class="cr modal plain ">
+            <i class="material-icons close text-white">close</i>
+            <div class="modal-head black center">Modal Head.</div>
+            <div class="modal-body black">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehende
               lorem
-
-              lorem
-
             </div>
-            <div class="modal-footer center">
+            <div class="modal-footer no-line black center">
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <button class="cr simple button red pulse adaptive ">DELETE</button>
+                        <button class="cr simple button green pulse adaptive ">DELETE</button>
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <button class="cr simple button green pulse adaptive">ACCEPT</button>
