Modals medium agregados con version responsive de prueba, hay que hacerle modificaciones para perfeccionar la posicion que mantiene

--- a/public/index.html
+++ b/public/index.html
@@ -24,21 +24,21 @@
         <i class="material-icons">add</i>
     </button>
     <div class="cr container">
-        <div class="cr modal small-login ">
+        <div class="cr modal medium ">
             <i class="material-icons close">close</i>
             <div class="modal-head center">Login</div>
             <div class="modal-body ">
                 <div class="row">
                     <div class="col-xs-12 col-md-12">
-                        <div class="cr input label adaptive">
-                            <div class="label">Name</div>
-                            <input class="in-label " type="text" name="">
+                        <div class="cr-material-field">
+                            <label class="m-label" for="in1">User</label>
+                            <input class="m-input" type="text" name="in1">
                         </div>
                     </div>
                     <div class="col-xs-12 col-md-12">
-                        <div class="cr input label adaptive">
-                            <div class="label">Password</div>
-                            <input class="in-label " type="password" name="">
+                        <div class="cr-material-field">
+                            <label class="m-label" for="in2">Password</label>
+                            <input class="m-input" type="password" name="in2">
                         </div>
                     </div>
                 </div>
@@ -54,8 +54,7 @@
                 </div>
             </div>
         </div>
-
-
+  
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
