--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Css/main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../Css/Grid/flexboxgrid.min.css">
+    <link rel="stylesheet" href="flexboxgrid.min.css">
     <title>LearnDesign</title>
     <style type="text/css">
     /* body{
@@ -157,7 +157,7 @@
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../JavaScript/Crow.js"></script>
+    <script src="Crow.js"></script>
     <script type="text/javascript">
     function triggerModal() {
         // if (!$('.cr.modal').is('.opened')) {
