--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-12">
                         <div class="cr-material-field">
-                            <label class="m-label">Username</label>
+                            <label class="m-label">User</label>
                             <input class="m-input" type="text" name="in1">
                         </div>
                     </div>
