Implementado nuevos loaders mas dinamicos

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>LearnDesign</title>
     <style type="text/css">
     /* body{
-            background: rgba(0, 0, 0, 0.575)
+            background: rgba(0, 0, 0, 1)
         } */
 
     .sep {
@@ -101,9 +101,12 @@
             </div>
         </div> -->
 
-        <div class="cr loader circular x-small"></div>
-        <div class="cr loader circular small"></div>
-        <div class="cr loader circular x-large"></div>
+        <div class="cr loader dots">
+            <div class="dot d1"></div>
+            <div class="dot d2"></div>
+            <div class="dot d3"></div>
+        </div>
+
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
