--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <button onclick="triggerModal();" class="cr button  float pulse">
             <i class="material-icons">add</i>
         </button>
-        <div class="cr modal shadow small">
+        <div class="cr modal  medium">
             <i class="material-icons close">close</i>
             <div class="modal-head center">Login</div>
             <div class="modal-body ">
@@ -54,7 +54,8 @@
                 </div>
             </div>
         </div>
-       <!--  <div class="row">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <!--  <div class="row">
             <div class="col-xs-12 col-md-6">
                 <ul id="list1" class="cr list content tiny">
                     <div class="ul-head">
@@ -100,13 +101,14 @@
                 </ul>
             </div>
         </div> -->
-
-        <div class="cr loader dots">
+        <!--    <div class="cr loader screen-dots">
             <div class="dot d1"></div>
             <div class="dot d2"></div>
             <div class="dot d3"></div>
         </div>
 
+ -->
+        <!-- <div class="cr loader screen-bouncy "></div> -->
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -118,11 +120,11 @@
         // } else {
         //     $('.cr.modal').modal('hide');
         // }
-            //  $("#list1").color({
-            //     background: "#F44336",
-            //     font: "#FFFFFF",
-            //     header: "#F44336"
-            // })
+        //  $("#list1").color({
+        //     background: "#F44336",
+        //     font: "#FFFFFF",
+        //     header: "#F44336"
+        // })
         // let checks = $("#list1").list('checked');
         // console.log(checks.number);
         // console.log(checks.checkboxs);
@@ -130,6 +132,14 @@
         //     background: '#F44336',
         //     font: '#FFFFFF'
         // })
+
+        $('body').loader('show', 'default', {
+            dfloadercolor: "#000"
+        });
+        setTimeout(function() {
+            $('body').loader('quit');
+        }, 2000);
+        
     }
     </script>
 </body>
