--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <button onclick="triggerModal();" class="cr button  float pulse">
             <i class="material-icons">add</i>
         </button>
-        <div class="cr modal  medium">
+        <div class="cr modal shadow small">
             <i class="material-icons close">close</i>
             <div class="modal-head center">Login</div>
             <div class="modal-body ">
@@ -133,12 +133,14 @@
         //     font: '#FFFFFF'
         // })
 
-        $('body').loader('show', 'default', {
-            dfloadercolor: "#000"
-        });
-        setTimeout(function() {
-            $('body').loader('quit');
-        }, 2000);
+        // $('body').loader('show', 'balls', {
+        //     background: '#F44336',
+        //     color: '#fff'
+        // });
+
+        // setTimeout(function() {
+        //     $('body').loader('quit');
+        // }, 2000);
         
     }
     </script>
