--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
         <button onclick="triggerModal();" class="cr button  float pulse">
             <i class="material-icons">add</i>
         </button>
-        <div class="cr modal shadow small">
-            <i class="material-icons close">close</i>
-            <div class="modal-head center">Login</div>
+        <div class="cr modal shadow medium ">
+            <i class="material-icons text-white close">close</i>
+            <div class="modal-head indigo center">Login</div>
             <div class="modal-body ">
                 <div class="row">
                     <div class="col-xs-12 col-md-12">
@@ -46,15 +46,15 @@
             <div class="modal-footer no-line center">
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <button class="cr simple button green pulse adaptive">REGISTER</button>
+                        <button class="cr simple button pink pulse adaptive">REGISTER</button>
                     </div>
                     <div class="col-xs-12 col-md-6">
-                        <button class="cr simple button green pulse adaptive">LOGIN</button>
+                        <button class="cr simple button pink pulse adaptive">LOGIN</button>
                     </div>
                 </div>
             </div>
         </div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        
         <!--  <div class="row">
             <div class="col-xs-12 col-md-6">
                 <ul id="list1" class="cr list content tiny">
@@ -106,9 +106,13 @@
             <div class="dot d2"></div>
             <div class="dot d3"></div>
         </div>
-
  -->
         <!-- <div class="cr loader screen-bouncy "></div> -->
+
+        <div class="cr loader circular pink"></div>
+        <div id="loadbar" class="cr linear loader adaptive pink">
+            <div  class="progress indeterminate"></div>
+        </div>
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -133,15 +137,13 @@
         //     font: '#FFFFFF'
         // })
 
-        // $('body').loader('show', 'balls', {
-        //     background: '#F44336',
-        //     color: '#fff'
+        // $('body').loader('show', 'default', {
+        //     time: 5000,
+        //     background: '#311B92',
+        //     dfloadercolor: '#fff'
         // });
 
-        // setTimeout(function() {
-        //     $('body').loader('quit');
-        // }, 2000);
-        
+        //Create function of progress up...        
     }
     </script>
 </body>
