Documentado cr list

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             </div>
             Like this account
         </button>
-        <div class="cr button  medium big hoverable indigo pulse icon ">
+        <div class="cr button  medium big  indigo  icon ">
             <div class="i-label">
                 <i class="material-icons">input</i>
             </div>
@@ -120,10 +120,10 @@
  -->
         <!-- <div class="cr loader screen-bouncy "></div> -->
 
-     <!--    <div class="cr loader circular red"></div>
-        <div id="loadbar" class="cr linear loader adaptive red">
-            <div class="progress determinate"></div>
-        </div> -->
+        <div class="cr loader circular red"></div>
+        <div id="loadbar" class="cr linear loader  red">
+            <div class="progress indeterminate"></div>
+        </div>
     </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
