Implementada menubar correctamente con los elementos más basicos que son los a links.

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,14 @@
 </head>
 
 <body>
+    <div class="cr menubar">
+        <a href="#" class="menu-item">Home</a>
+        <a href="#" class="menu-item">News</a>
+        <a href="#" class="menu-item">Contact</a>
+        <a href="#" class="menu-item">Sign in</a>
+    </div>
     <div class="cr container">
-        <button onclick="triggerModal();" class="cr button float pulse">
+        <button onclick="triggerModal();" class="cr button float  pulse">
             <i class="material-icons">add</i>
         </button>
         <div class="cr modal shadow medium ">
