--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,32 @@
     <link rel="stylesheet" href="../Css/Grid/flexboxgrid.min.css">
     <title>LearnDesign</title>
     <style type="text/css">
-    /* body{
-            background: rgba(0, 0, 0, 1)
-        } */
+    body {
+        background: #FF1744;
+        /*background: #FF3D00;*/
+    }
 
     .sep {
         padding-top: 20px;
+    }
+
+    .center-div {
+        position: absolute;
+        top: 35%;
+        left: 10%;
+        display: inline-block;
+    }
+
+    .card-contain {
+        width: 40%;
+        height: auto;
     }
     </style>
 </head>
 
 <body>
-    <div id="mybar" class="cr menubar  red   mobile-top">
-        <div class="brand">Crown</div>   
+    <div id="mybar" class="cr menubar  white   mobile-top">
+        <div class="brand">Crown</div>
         <div class="menu-icon right"><i class="material-icons">menu</i></div>
         <a href="#" class="menu-item ">Home</a>
         <a href="#" class="menu-item">News</a>
@@ -33,12 +46,8 @@
         <a href="#" class="menu-item pulse right">Register</a>
         <a href="#" class="menu-item pulse right">Log in</a>
     </div>
-
-
-
-
     <div id="bd" class="cr container">
-        <button onclick="triggerModal();" class="cr button float  pulse">
+        <button onclick="triggerModal();" class="cr button white  float  pulse">
             <i class="material-icons">add</i>
         </button>
         <div class="cr modal shadow medium ">
@@ -71,7 +80,58 @@
                 </div>
             </div>
         </div>
-        <button class="cr button outline large rounded big red pulse icon ">
+        <div class="center-div">
+            <h1 class="text-white ">Martin Garrix & David Guetta ft Romy Dya & Jamie Scott - So Far Away</h1>
+            <div style="display: inline-block;" class="cr button white big pulse large hoverable">Martin Garrix</div>
+            <div style="display: inline-block;" class="cr button white big pulse large hoverable">David Guetta</div>
+            <div style="display: inline-block;" class="cr button white big pulse large hoverable">Romy Dya</div>
+            <div style="display: inline-block;" class="cr button white big pulse large hoverable">Jamie Scott</div>
+        </div>
+        <div style="position: absolute; top: 60%; left: 25%;" class="cr card medium">
+            <div class="card-head ">Letters</div>
+            <div class="card-body">
+                <h3>[Verse 1: Jamie Scott]</h3>
+                <p>Light 'em up, light 'em up Tell me where you are, tell me where you are The summer nights, the bright lights And the shooting stars, they break my heart</p>
+                <h3>[Pre-Chorus 1: Jamie Scott]</h3>
+                <p>I'm calling you now, but you're not picking up Your shadows so close if you are still in love Then light a match, light a match Baby, in the dark, show me where you are</p>
+                <h3>[Chorus: Jamie Scott]</h3>
+                <p>
+                    Oh, love How I miss you every single day when I see you on those streets Oh, love Tell me there's a river I can swim that will bring you back to me 'Cause I don't know how to love someone else I don't know how to forget your face Oh, love God, I miss you every single day and now you're so far away
+                </p>
+                <h3>[Post-Chorus: Jamie Scott]</h3>
+                <strong>So far away</strong>
+                <h3>[Verse 2: Romy Dya]</h3>
+                <p>
+                    It's breaking me, I'm losing you We were far from perfect, but we were worth it Too many fights, and we cried, but never said we're sorry Stop saying you love me
+                </p>
+                <h3>[Pre-Chorus 2: Romy Dya]</h3>
+                <p>You're calling me now, but I can't pick up Your shadow's too close, and I'm still in love The summer's over now, but somehow, it still breaks my heart We could have had the stars, oh</p>
+                <h3>[Chorus: Jamie Scott & Romy Dya]</h3>
+                <p>Oh, love How I miss you every single day when I see you on those streets Oh, love Tell me there's a river I can swim that will bring you back to me 'Cause I don't know how to love someone else I don't know how to forget your face Oh, love God, I miss you every single day and now you're so far away</p>
+                <h3>[Post-Chorus: Romy Dya & Jamie Scott]</h3>
+                <p>So far away So far away Oh, so far away So far away</p>
+                <h3>[Outro: Romy Dya]</h3>
+                <p>
+                    Oh, love How I miss you every single day when I see you on those streets Oh, love Tell me there's a river I can swim that will bring you back to me 'Cause I don't know how to love someone else I don't know how to forget your face Oh, love God, I miss you every single day when you're so far away
+                </p>
+            </div>
+            <div class="card-footer">
+                <div style="position: relative; left: 35%" class="cr button medium  big icon ">
+                    <div class="i-label">
+                        <i class="material-icons">play_arrow</i>
+                    </div>
+                    Play
+                </div>
+            </div>
+        </div>
+
+        <div style="position: absolute; top: 80%; left: 0" class="cake white">
+            <i class="material-icons">help</i>
+            <div class="content">
+                <h3>Martin Garrix & David Guetta</h3>
+            </div>
+        </div>
+        <!-- <button class="cr button outline large rounded big red pulse icon ">
             <div class="i-label">
                 <i class="material-icons">favorite</i>
             </div>
@@ -82,7 +142,7 @@
                 <i class="material-icons">input</i>
             </div>
             Import files and media 
-        </div>
+        </div> -->
         <!--  <div class="row">
             <div class="col-xs-12 col-md-6">
                 <ul id="list1" class="cr list content tiny">
@@ -136,12 +196,10 @@
         </div>
  -->
         <!-- <div class="cr loader screen-bouncy "></div> -->
-
-     <!--    <div class="cr loader circular red"></div>
+        <!--    <div class="cr loader circular red"></div>
         <div id="loadbar" class="cr linear loader adaptive red">
             <div class="progress determinate"></div>
         </div> -->
-    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../JavaScript/Crow.js"></script>
@@ -167,7 +225,7 @@
 
         $('#bd').loader('show', 'balls', {
             time: 5000,
-            background: '#F44336',
+            background: '#fff',
             dfloadercolor: '#fff'
         });
 
